// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoyaltyMapper mapAdjustedBasketToBasketCredits should process the continuity campaign fulfilled results and update the mapped basket credits 1`] = `
{
  "offers": [
    {
      "amount": 500,
      "category": "CONTINUITY",
      "name": "500 points for spending over £10 in three transactions",
      "timesRedeemed": 1,
      "totalTransactionCount": 3,
      "transactionCount": 3,
      "type": "COMPLETING",
    },
  ],
  "total": 500,
}
`;

exports[`LoyaltyMapper mapAdjustedBasketToBasketCredits should process the continuity campaign in_progress results and update the mapped basket credits 1`] = `
{
  "offers": [
    {
      "amount": 0,
      "category": "CONTINUITY",
      "name": "500 points for spending over £10 in three transactions",
      "timesRedeemed": 1,
      "totalTransactionCount": 3,
      "transactionCount": 2,
      "type": "IN_PROGRESS",
    },
  ],
  "total": 0,
}
`;

exports[`LoyaltyMapper mapAdjustedBasketToBasketCredits should process the quest campaign fulfilled results and update the mapped basket credits 1`] = `
{
  "offers": [
    {
      "amount": 2000,
      "category": "QUEST",
      "name": "Travel Quest",
      "objectivesMet": [
        {
          "campaignId": "1762399",
          "campaignName": "Quest: Car Hire (UPC: 245882)",
        },
        {
          "campaignId": "1762401",
          "campaignName": "Quest: Buy eScooter (UPC: 245902)",
        },
        {
          "campaignId": "1762402",
          "campaignName": "Quest: Buy eBike (UPC: 245903)",
        },
      ],
      "timesRedeemed": 1,
      "totalObjectives": [
        {
          "campaignId": "1762399",
          "campaignName": "Quest: Car Hire (UPC: 245882)",
        },
        {
          "campaignId": "1762401",
          "campaignName": "Quest: Buy eScooter (UPC: 245902)",
        },
        {
          "campaignId": "1762402",
          "campaignName": "Quest: Buy eBike (UPC: 245903)",
        },
      ],
      "type": "COMPLETING",
    },
  ],
  "total": 2000,
}
`;

exports[`LoyaltyMapper mapAdjustedBasketToBasketCredits should process the quest campaign in progress results and update the mapped basket credits 1`] = `
{
  "offers": [
    [
      {
        "amount": 0,
        "category": "QUEST",
        "name": "Travel Quest",
        "objectivesMet": [
          {
            "campaignId": "1762399",
            "campaignName": "Quest: Car Hire (UPC: 245882)",
          },
          {
            "campaignId": "1762401",
            "campaignName": "Quest: Buy eScooter (UPC: 245902)",
          },
        ],
        "timesRedeemed": 1,
        "totalObjectives": [
          {
            "campaignId": "1762399",
            "campaignName": "Quest: Car Hire (UPC: 245882)",
          },
          {
            "campaignId": "1762401",
            "campaignName": "Quest: Buy eScooter (UPC: 245902)",
          },
          {
            "campaignId": "1762402",
            "campaignName": "Quest: Buy eBike (UPC: 245903)",
          },
        ],
        "type": "IN_PROGRESS",
      },
    ],
  ],
  "total": 0,
}
`;

exports[`LoyaltyMapper mapAdjustedBasketToBasketCredits should return deduplicated results when there's more than one credit instance per campaign 1`] = `
{
  "offers": [
    {
      "amount": 400,
      "name": "Test Campaign (x2)",
      "timesRedeemed": 2,
    },
  ],
  "total": 800,
}
`;

exports[`LoyaltyMapper mapAdjustedBasketToBasketCredits should return the mapped basket credits 1`] = `
{
  "offers": [
    {
      "amount": 400,
      "name": "Test Campaign",
      "timesRedeemed": 1,
    },
  ],
  "total": 400,
}
`;

exports[`LoyaltyMapper mapAdjustedBasketToBasketEarn should return the mapped basket earn 1`] = `
{
  "offers": [],
  "total": 400,
}
`;

exports[`LoyaltyMapper mapAdjustedBasketToItemCredits should process the continuity campaign fulfilled results and update the mapped item credits 1`] = `
{
  "offers": [
    {
      "amount": 500,
      "category": "CONTINUITY",
      "name": "500 points for spending £10 on bears (UPC: 245896)",
      "sku": "245896",
      "timesRedeemed": 1,
      "totalSpend": 1000,
      "totalTransactionSpend": 1000,
      "type": "COMPLETING",
    },
  ],
  "total": 500,
}
`;

exports[`LoyaltyMapper mapAdjustedBasketToItemCredits should process the continuity campaign in_progress results and update the mapped item credits 1`] = `
{
  "offers": [
    {
      "amount": 0,
      "category": "CONTINUITY",
      "name": "500 points for spending £10 on bears (UPC: 245896)",
      "sku": "245896",
      "timesRedeemed": 1,
      "totalSpend": 800,
      "totalTransactionSpend": 1000,
      "type": "IN_PROGRESS",
    },
  ],
  "total": 0,
}
`;

exports[`LoyaltyMapper mapAdjustedBasketToItemCredits should return deduplicated results when there's more than one credit instance per campaign 1`] = `
{
  "offers": [
    {
      "amount": 400,
      "name": "Test Campaign (x2)",
      "sku": "123456",
      "timesRedeemed": 2,
    },
  ],
  "total": 800,
}
`;

exports[`LoyaltyMapper mapAdjustedBasketToItemCredits should return the mapped item credits 1`] = `
{
  "offers": [
    {
      "amount": 400,
      "name": "Test Campaign",
      "sku": "123456",
      "timesRedeemed": 1,
    },
  ],
  "total": 400,
}
`;
